tests/rosetta/out/Clojure/15-puzzle-solver.error
run: exit status 1
Syntax error compiling at (/tmp/15-puzzle-solver.clj:5:13).
Unable to resolve symbol: testpkg in this context

Full report at:
/tmp/clojure-8392303353178035728.edn
