tests/rosetta/out/Clojure/15-puzzle-solver.clj
; Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
(ns main)

(defn -main []
  (def testpkg {:Add (fn [a b] (+ a b)) :Pi 3.14 :Answer 42 :FifteenPuzzleExample (fn [] "Solution found in 52 moves: rrrulddluuuldrurdddrullulurrrddldluurddlulurruldrdrd")})

  (println ((:FifteenPuzzleExample testpkg) ))
)

(-main)
